[workspace]

members = [
    "libpasskey", "demo",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
libpasskey = { path = "./libpasskey" }
axum = { version = "0.8.1", features = ["http2", "macros", "multipart"] }
tokio = { version = "1.42.0", features = ["bytes", "fs", "io-std", "macros", "net", "parking_lot", "rt-multi-thread", "signal", "sync", "time", "tracing"] }
