[workspace]

members = [
    "demo-passkey",
    "libpasskey",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
libpasskey = { path = "./libpasskey" }

axum = { version = "0.8", features = ["http2", "macros", "multipart"] }
tokio = { version = "1.43", features = ["bytes", "fs", "io-std", "macros", "net", "parking_lot", "rt-multi-thread", "signal", "sync", "time", "tracing"] }
rustls = { version = "0.23.23", features = ["ring"] }
axum-core = "0.5.0"
axum-extra = { version = "0.10.0", features = ["typed-header"] }
chrono = { version = "0.4.39", features = ["serde"] }
